<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/activityPadding"
  tools:context=".Activity.Admin.Admin">

  <TextView
    android:id="@+id/employeeIdPrompt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="15dp"
    android:text="@string/adminPromotePrompt"
    android:textSize="@dimen/textViewTextSize" />

  <EditText
    android:id="@+id/employeeIdEntry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="15dp"
    android:layout_toRightOf="@id/employeeIdPrompt"
    android:hint="@string/adminPromoteHint"
    android:inputType="text"
    android:textSize="20dp" />

  <Button
    android:id="@+id/promoteEmployeeButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@id/employeeIdEntry"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="-54dp"
    android:text="@string/adminPromoteBtn" />

   <EditText
     android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:hint="@string/couponNamePrompt"
     android:layout_alignLeft="@id/employeeIdPrompt"
     android:layout_marginTop="120dp"
     android:textSize="@dimen/textViewTextSize"
     android:inputType="text"
     android:id="@+id/couponNameEntry"/>

  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/couponQuantityPrompt"
    android:layout_toRightOf="@id/couponNameEntry"
    android:layout_marginTop="120dp"
    android:textSize="@dimen/textViewTextSize"
    android:inputType="number"
    android:id="@+id/couponQuantityEntry"/>

  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/couponDiscountPrompt"
    android:layout_toRightOf="@id/couponQuantityEntry"
    android:layout_marginTop="120dp"
    android:textSize="@dimen/textViewTextSize"
    android:inputType="number"
    android:id="@+id/couponPercentageEntry"/>

  <Button
    android:id="@+id/addCouponBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/couponQuantityEntry"
    android:text="Add Coupon"/>

  <TextView
    android:id="@+id/viewSalesData"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:layout_below="@id/addCouponBtn"
    android:layout_marginTop="15dp"
    android:scrollbars="vertical"
    android:textSize="@dimen/textViewTextSize" />

  <Button
    android:id="@+id/viewSalesBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/viewSalesData"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="-451dp"
    android:text="@string/adminViewSalesBtn"
    android:layout_marginLeft="100dp"/>

  <Button
    android:id="@+id/adminExitBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/viewSalesBtn"
    android:layout_below="@id/viewSalesData"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="-451dp"
    android:text="@string/exitBtn" />
</RelativeLayout>